examples/test/testpolicy17805.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17805
  namespace: namespace104
spec:
  podSelector:
    matchLabels:
      key43: value3
      key47: value25
      key40: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value22
      podSelector:
        matchLabels:
          key48: value38
